[package]
name = "fontpad"
version = "0.1.2"
edition = "2021"
authors = ["Emma Britton <emmabritton@pm.me>"]
description = "Pixel font tool for buffer graphics"
license-file = "LICENSE"
repository = "https://github.com/emmabritton/fontpad"
readme = "README.md"
publish = false

[dependencies]
pixels-graphics-lib = { version = "0.16.0", default-features = false, features = ["scenes", "window_prefs"] }
anyhow = "1.0.81"
copypasta = "0.10.1"
serde = { version = "1.0.197", features = ["derive"] }